=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


** CHANGES ALONG trunk
-----------------------------------------------------------------------
2016-04-27                                                    trunk-492
Added die when user reads basis + LDAU

- Reading the basis from NetCDF or ascii files
  is not allowed when using LDA+U.

  This feature is simply not implemented yet.
  (but could be)

modified:
  Src/initatom.f

-----------------------------------------------------------------------
2016-04-27                                                    trunk-491
Fixes for pointers and possible seg-fault

- Pointers in ldau.F where only nullified in
  the first run. However, they should be
  in each SCF.
  Fixed.

- Print-out of LDAU parameters in the basis-specification
  This makes easy identification of the used LDA+U
  basis.

- A possible seg-fault for accessing array elements beyond
  dimension was found in the ldau_specs.f.

  A possible fix has been added.

  TODO: Check validity for other systems.
  For Javier's initial test MnO the results are identical.

modified:
  Src/basis_types.f
  Src/ldau.F
  Src/ldau_specs.f

-----------------------------------------------------------------------
2016-04-25                                                    trunk-490
Second patches by Nick Andersen

* The files that have been added or modified are:

- hsparse.F:             Call to basis_parameters only if switch_ldau
- matel_registry.F90:    Cosmetic changes on show_pool
- register_rfs.F90:      Writing of part of the output only done if
                         the directive DEBUG_PAO is switched
- siesta_init.F:         Remove the call to test_register 

-----------------------------------------------------------------------
2016-04-25                                                    trunk-488